--- a/app/views/v5/l2/users/add/confirmation.html
+++ b/app/views/v5/l2/users/add/confirmation.html
@@ -36,7 +36,7 @@
 
             <p>
                 {% if data['organisation-name'] == 'dwp' %}
-                    <a href="../add/details-dwp" class="govuk-link">
+                    <a href="../add/details" class="govuk-link">
                         Add another DWP user
                     </a>
                 {% else %}
