--- a/app/views/v5/l2/users/view/g4s.html
+++ b/app/views/v5/l2/users/view/g4s.html
@@ -15,7 +15,10 @@
         Users
     </h1>
 
-    <a href="../add/details-g4s" class="govuk-button listing-page">Add a user</a>
+    <form id="form" method="post" action="../add/details">
+        <input type="hidden" name="organisation-name-existing" id="organisation-name-existing" value="G4S">
+        <button type="submit" class="govuk-button listing-page">Add a user</button>
+    </form>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -103,7 +106,7 @@
 
     <nav role="navigation" aria-label="Pagination">
         <div class="pagination__summary">
-        Showing 1 &ndash; 10 of 15 users
+            Showing 1 &ndash; 10 of 15 users
         </div>
 
         <ul class="pagination">
