--- a/app/views/v5/l2/users/view/remploy.html
+++ b/app/views/v5/l2/users/view/remploy.html
@@ -15,127 +15,128 @@
         Users
     </h1>
 
-    <a href="../add/details-remploy" class="govuk-button listing-page">Add a user</a>
+    <form id="form" method="post" action="../add/details">
+        <input type="hidden" name="organisation-name-existing" id="organisation-name-existing" value="Remploy">
+        <button type="submit" class="govuk-button listing-page">Add a user</button>
+    </form>
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
-        <th scope="col" class="govuk-table__header">Status</th>
-      </tr>
-    </thead>
-
-    <tbody class="govuk-table__body">
-      {% if data['organisation-name'] == 'Remploy' %}
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header">
-            <a href="single" class="govuk-link">
-                {{ data['user-first-name'] }} {{ data['user-last-name'] }}
-            </a>
-        </th>
-        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell">Pending activation</td>
-      </tr>
-      {% endif %}
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
-        <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
-        <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
-        <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
-        <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
-        <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
-        <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
-        <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
-        <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
-        <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
-        <td class="govuk-table__cell ">Active</td>
-      </tr>
-
-      <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
-          <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
-          <td class="govuk-table__cell">Active</td>
+    <table class="govuk-table">
+        <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
+            <th scope="col" class="govuk-table__header">Status</th>
         </tr>
-    </tbody>
-  </table>
+        </thead>
 
-  <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 23 users
-    </div>
+        <tbody class="govuk-table__body">
+        {% if data['organisation-name'] == 'Remploy' %}
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">
+                <a href="single" class="govuk-link">
+                    {{ data['user-first-name'] }} {{ data['user-last-name'] }}
+                </a>
+            </th>
+            <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
+            <td class="govuk-table__cell">Pending activation</td>
+        </tr>
+        {% endif %}
 
-    <ul class="pagination">
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Frank Strandli</a></th>
+            <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-        <li class="pagination__item">
-            <a class="pagination__link disabled" aria-label="Previous page">
-              <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-            </a>
-          </li>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Whitlow</a></th>
+            <td class="govuk-table__cell">amy.whitlow@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Peter Haddock</a></th>
+            <td class="govuk-table__cell">peter.haddock@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-      <li class="pagination__item">
-        <span class="pagination__link current" aria-label="Page 1">1</span>
-      </li>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McClelland</a></th>
+            <td class="govuk-table__cell">john.mcclelland@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-      <li class="pagination__item">
-        <a class="pagination__link" href="remploy-2" aria-label="Page 2">2</a>
-      </li>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Debbie Kerr</a></th>
+            <td class="govuk-table__cell">debbie.kerr@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-      <li class="pagination__item">
-          <a class="pagination__link" href="employ-3" aria-label="Page 3">3</a>
-        </li>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Bill Fotherby</a></th>
+            <td class="govuk-table__cell">bill.fotherby@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-      <li class="pagination__item">
-        <a class="pagination__link" href="remploy-2" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mary Hennigan</a></th>
+            <td class="govuk-table__cell">mary.hennigan@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
 
-  <p class="govuk-!-margin-top-9">
-    <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
-  </p>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Weatherall</a></th>
+            <td class="govuk-table__cell">david.weatherall@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carl Shutt</a></th>
+            <td class="govuk-table__cell">carl.shutt@remploy.co.uk</td>
+            <td class="govuk-table__cell ">Active</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Yeboah</a></th>
+            <td class="govuk-table__cell">frank.strandli@remploy.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <nav role="navigation" aria-label="Pagination">
+        <div class="pagination__summary">
+        Showing 1 &ndash; 10 of 23 users
+        </div>
+
+        <ul class="pagination">
+            <li class="pagination__item">
+                <a class="pagination__link disabled" aria-label="Previous page">
+                    <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+                </a>
+            </li>
+
+            <li class="pagination__item">
+                <span class="pagination__link current" aria-label="Page 1">1</span>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-2" aria-label="Page 2">2</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="employ-3" aria-label="Page 3">3</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="remploy-2" aria-label="Next page">
+                    Next <span aria-hidden="true" role="presentation">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <p class="govuk-!-margin-top-9">
+        <a href="../../dashboard" class="govuk-link">Back to dashboard</a>
+    </p>
 {% endblock %}
