Content updates to Register journey

--- a/app/views/v5/l3/register/auth-app.html
+++ b/app/views/v5/l3/register/auth-app.html
@@ -28,7 +28,7 @@
      
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
-                        Code in app
+                        Code
                 </label>
                 <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
             </div>
@@ -38,6 +38,6 @@
                 href: "registration-complete"
             }) }}
 
-            <p>If you’d rather sign in using a text message, you’ll have to <a href="enter-mobile">start again</a>.</p>
+            <p>If you would rather sign in using a text message, you will have to <a href="enter-mobile">start again</a>.</p>
   </div>
 {% endblock %}
