--- a/app/views/v5/l3/register/enter-mobile.html
+++ b/app/views/v5/l3/register/enter-mobile.html
@@ -24,12 +24,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Enter your mobile phone number</h1>
-            <p>It must be a mobile phone number. Landlines will not be accepted.</p>
+            <p>You cannot use a landline number. This is because landlines are often used be used by 
+                many people, so they are not as secure as mobiles.</p>
       
-            {{ govukDetails({
-                summaryText: "Why can't I use a landline?",
-                text: "We’re going to use this number to check it’s you signing in. As some landlines are used by many people, they aren’t as secure."
-            }) }}
      
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
