--- a/app/views/v5/l3/register/qrcode.html
+++ b/app/views/v5/l3/register/qrcode.html
@@ -23,8 +23,8 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Set up your smartphone or tablet</h1>
-            <p>You need to:</p>
+        <h1 class="govuk-heading-l">Set up an authenticator app</h1>
+            <p>Using your smartphone or tablet:</p>
 
                 <ol class="govuk-list govuk-list--number">
                     <li>Download an authenticator app (such as Google Authenticator or Microsoft Authenticator)</li>
@@ -36,16 +36,16 @@
                           <details class="govuk-details" data-module="govuk-details">
                                 <summary class="govuk-details__summary">
                                   <span class="govuk-details__summary-text">
-                                    I can’t scan the QR code
+                                    I cannot scan the QR code
                                   </span>
                                 </summary>
                                 <div class="govuk-details__text">
-                                    <p>Choose ‘enter code manually’, then enter this key:</p>
+                                    <p>Choose to enter the code manually then enter this key:</p>
                                     <p>OVAW QI2E MFSC SZBB</p>
                                 </div>
                               </details>
                         </li>
-                    <li>Check the app for your 6 digit access code. The code refreshes every 30 seconds.</li>
+                    <li>Check the app for your 6 digit access code. The code changes every 30 seconds.</li>
                   </ol>   
                   
                   {{ govukButton({
