--- a/app/views/v5/l3/register/resend-code.html
+++ b/app/views/v5/l3/register/resend-code.html
@@ -23,9 +23,8 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Send me another text message</h1>
-            <p>The text message will contain a new code.</p>
-            <p>If your previous text arrives later, the code in it won’t work.</p>
+        <h1 class="govuk-heading-l">Send me a new code</h1>
+            <p>We will send you a text message with a new code.</p>
       
                   
             {{ govukButton({
