--- a/app/views/v5/l3/register/start.html
+++ b/app/views/v5/l3/register/start.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">Register with DWP Authenticate</h1>
-      <p>DWP Authenticate will allow you to access the Provider Referrals and Payments system service.</p>
+      <p>Registering your account with DWP Authenticate will let you access the Provider Referrals and Payments system service.</p>
 
       {{ govukButton({
         text: "Start registration",
@@ -35,6 +35,7 @@
       <h2 class="govuk-heading-m govuk-!-margin-top-6">Before you start</h2> 
 
       <p>You'll need your mobile phone</p>
+
 
       {{ govukDetails({
         summaryText: "Why do I need a mobile phone?",
