Content updates to register start page

--- a/app/views/v5/l3/register/start.html
+++ b/app/views/v5/l3/register/start.html
@@ -34,13 +34,9 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-top-6">Before you start</h2> 
 
-      <p>You'll need your mobile phone</p>
-
-
-      {{ govukDetails({
-        summaryText: "Why do I need a mobile phone?",
-        text: "After you’ve registered, you’ll use your mobile phone when you sign in. This makes the service more secure. It helps prove you’re the person using the service."
-      }) }}
+      <p>You'll need your mobile phone</p>  
+      <p>After you have registered, we will send you a code to your mobile whenever you want to sign in. This makes 
+        the service more secure by proving it is you signing in. </p>
      
     </div>
   </div>
