Amends to phone number playback length

--- a/app/views/v5/l3/register/code-in-message.html
+++ b/app/views/v5/l3/register/code-in-message.html
@@ -25,7 +25,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
             <p>It should arrive in a few minutes.</p>
-            <p>We sent it to a number ending 1234.</p>
+            <p>We sent it to 0778 7147346.</p>
       
             {{ govukDetails({
                 summaryText: "This phone number is wrong",
