--- a/app/views/v5/l2/reset-password/start.html
+++ b/app/views/v5/l2/reset-password/start.html
@@ -33,11 +33,11 @@
       
             <h2 class="govuk-heading-s">What will happen:</h2>
             <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
-                <li>You’ll enter the email address you normally use to sign in.</li>
-                <li>We’ll send a password reset code to that email address.</li>
-                <li>You’ll enter that password reset code.</li>
-                <li>You’ll be authenticated by text or an app (if you’ve set that up).</li>
-                <li>You’ll create a new password.</li>
+                <li>Enter the email address you normally use to sign in.</li>
+                <li>We’ll send you an email with a password reset code.</li>
+                <li>Enter the password reset code.</li>
+                <li>Authenticate with the code we send in a text message or using an authenticator app.</li>
+                <li>Create a new password.</li>
                 <li>You’ll be signed in to DWP Authenticate.</li>
             </ol>
 
