--- a/app/views/v5/l2/reset-password/code-in-message.html
+++ b/app/views/v5/l2/reset-password/code-in-message.html
@@ -23,18 +23,18 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We’ve sent you a text message</h1>
-            <p>It contains a code and should arrive in a few minutes.</p>
+        <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
+            <p>It should arrive in a few minutes.</p>
             <p>We sent it to a number ending 1234.</p>
       
             {{ govukDetails({
-                summaryText: "This isn't the right phone number",
+                summaryText: "This phone number is wrong",
                 text: "Contact your organisation. They can help."
             }) }}
      
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
-                        Code in text message
+                        Code
                 </label>
                 <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
             </div>
@@ -44,6 +44,6 @@
                 href: "create-new-password.html"
             }) }}
 
-            <p><a href="resend-code">I didn't receive a text message</a></p>
+            <p><a href="resend-code">I did not receive a code</a></p>
   </div>
 {% endblock %}
