--- a/app/views/v5/l2/reset-password/password-reset-confirmation.html
+++ b/app/views/v5/l2/reset-password/password-reset-confirmation.html
@@ -27,10 +27,10 @@
             titleText: "Your password has been reset"
         }) }}
 
-        <p>You’ll now use the new password when logging into DWP Authenticate.</p>
+        <p>Use the new password when you sign in to DWP Authenticate.</p>
 
         <h2 class="govuk-heading-m govuk-!-margin-top-6">Accessing Provider Referrals and Payments service</h2>
-        <p>As you’ve already been authenticated, you can continue to this service now.</p>
+        <p>You have already been authenticated, so you can continue to this service.</p>
 
         {{ govukButton({
             text: "Continue"
