--- a/app/views/v5/l2/reset-password/resend-code.html
+++ b/app/views/v5/l2/reset-password/resend-code.html
@@ -23,13 +23,11 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Send me another text message</h1>
-            <p>The text message will contain a new code.</p>
-
-            <p>If your previous text arrives later, the code in it won’t work.</p>
+        <h1 class="govuk-heading-l">Send me another code</h1>
+            <p>We will send you a text message with a new code.</p>
       
             {{ govukButton({
-                text: "Send new text message",
+                text: "Send new code",
                 href: "code-in-message.html"
             }) }}
 
